fixed whitespace

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -3,8 +3,7 @@
     padding: 0;
 }
 
-html,
-body {
+html {
     height: 100%;
     width: 100%;
 }
@@ -34,7 +33,7 @@ header {
             }
 
             .navitem:nth-child(2) {
-                margin-right: auto;              
+                margin-right: auto;
             }
 
         }
